3.0.2
 * Enabled caching in lsl.sim.beam to reduce the number of times a model is loaded
 * Updated lsl.common.data_access to request file be gzip compressed when downloaded
 * Refactored lsl.common.data_access to expose the internal downloader function
 * Added better warnings/error messages to lsl.misc.file_cache and lsl.misc.file_lock to help debug stuck locks

3.0.1
 * Fixed a problem with lsl.sim.beam.beam_response/mueller_matrix when scalar azimuth/altitude are provided
 * Fixed a problem with lsl.sim.beam.beam_response/mueller_matrix returning NaNa for 'empirical' and 'llfss'
 * Updated FrameTimestamp.__float__ to strictly return a float
 * Fixed a timestamp problem in lsl.reader.vdif related to tracking leap seconds since the reference epoch

3.0.0
 * Switch to the GNU scientific library for internal Bessel functions
 * Fixed an undefined variable error in lsl.statistics.robust.polyfit
 * Fixed a division error in lsl.misc.mathutils.sphfit when real_only=True
 * Switched to a "download on demand and cache" method of distributing data for LSL
 * Added a lsl.common.stations.ARX.revision() method to find the revision name for an ARX board
 * Added a new lsl.sim.beam module to find the dipole antenna response
 * Updated the telemetry client to also send the Python version (major.minor)
 * Dropped support for Python 2.7 and <3.8
 * Switched over to astropy for most internal astronomical calculations
 * Added astropy compatibility hooks for many LSL classes
 * Moved from multiprocessing to concurrent.futures for multi-processing support
 * Switched to multi-phase initialization for C++ extensions
 * Merged ARX response files into single file per board to reduce number of data files
 * Moved lsl.common.mcs value lookup functions over to enum.Enum classes
 * Updated the lsl.writer.fitsidi to write antenna coordinates in the ECEF frame
 * Changed 'elevation' to 'azimuth' in cases where it reference the angle above the horizon